# vbacktest

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCUSSION.md  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: data_contract.md
docs/schemas/: backtest_result_v1.json
docs/superpowers/plans/: 2026-04-06-test-quality-fixes.md
examples/: basic_backtest.py  custom_strategy.py  go_no_go_validation.py
scripts/: port_extras.py
src/vbacktest/: __init__.py  benchmark.py  config.py  data_loader.py  engine.py  exceptions.py  exit_rules.py  indicator_dedup.py  indicators.py  portfolio.py  registry.py  results.py  strategy.py
src/vbacktest/analysis/: __init__.py  annual_breakdown.py  defaults.py  execution_realism.py  go_no_go.py  monte_carlo.py  regime_rolling.py  report.py  risk_metrics.py
src/vbacktest/cli/: main.py
src/vbacktest/strategies/: __init__.py  bollinger_breakout.py  ma_crossover.py  momentum.py  rsi_mean_reversion.py  turtle_trading.py  volume_breakout.py
src/vbacktest/strategies/extras/: __init__.py  accel_breakout.py  accumulation_breakout.py  adx_trend.py  base_breakout.py  bollinger_breakout_v2.py  bollinger_mean_reversion.py  bowtie_breakout.py  (+40 more)
tests/: conftest.py  test_cli.py  test_config.py  test_data_loader.py  test_engine.py  test_exceptions.py  test_exit_rules.py  test_extras_strategies.py  test_indicator_dedup.py  test_indicators.py  test_integration.py  test_portfolio.py  test_public_api.py  test_registry.py  test_results.py  test_strategies.py  test_strategy.py
tests/test_analysis/: test_go_no_go.py
